<resources>
    <string name="app_name">yiw_task9</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_scan_code">Scan Code</string>
    <string name="promotions">Promotions</string>
    <string name="title_my_account">My Account</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account_info_settings_more"><![CDATA[Account info, Settings & More]]></string>
    <string name="account">ACCOUNT</string>
    <string name="account_information">Account Information</string>
    <string name="order_new_debit_card">Order New Debit Card</string>
    <string name="change_easypaisa_account_pin">Change Easypaisa Account PIN</string>
    <string name="link_telenor_microfinance_bank">Link Telenor Microfinance Bank</string>
    <string name="link_debit_card">Link Debit Card</string>
    <string name="get_your_tax_certificate">Get your tax Certificate</string>
    <string name="general">GENERAL</string>
    <string name="notifications">Notifications</string>
    <string name="finger_print_face_login">Finger Print/Face Login</string>
    <string name="package_str">package:</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_dialog_message">Some feature of app may not work if permission is not granted. Go to setting to allow permission</string>
    <string name="cancel">Cancel</string>
    <string name="goto_setting">Go to setting</string>
    <string name="permission_alert">Permission Alert</string>
    <string name="dummy_promotion_item_str_big"><![CDATA[Make Qr payments & Win Big!]]></string>
    <string name="dummy_promotion_item_str_small">Be the luck on to WIN 25,000 cash price and iPhone 12</string>
    <string name="read_more">Read more</string>
    <string name="my_cashbacks">My Cashbacks</string>
    <string name="add_cash">ADD CASH</string>
    <string name="last_update_5_min_go">last update 5 min go</string>
    <string name="rs_100_0">Rs. 100.0</string>
    <string name="current_balance">Current Balance</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="mobile_packages">Mobile Packages</string>
    <string name="easyload">Easyload</string>
    <string name="send_money">Send Money</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_earn"><![CDATA[Invite & Earn]]></string>
    <string name="topups">Topups</string>
    <string name="donations">Donations</string>
    <string name="insurance">Insurance</string>
    <string name="my_cashback">My Cashback</string>
    <string name="easypaisa_tohfa">Easypaisa Tohfa</string>
    <string name="bus_tickets">Bus Tickets</string>
    <string name="discount">Discount</string>
    <string name="more">More</string>
    <string name="featured_mobile_packages">Featured Mobile Packages</string>
    <string name="see_all">See All</string>
    <string name="favorites">Favorites</string>
    <string name="dummy_name">Imran Anjum</string>
    <string name="onnet_mins">Onnet Mins</string>
    <string name="offnet_mins">Offnet Mins</string>
    <string name="sms">SMS</string>
    <string name="gbs">GBs</string>
    <string name="buy_now">Buy Now</string>
    <string name="profile_settings_more"><![CDATA[Profile, Settings & More]]></string>
    <string name="my_account">My Account</string>
    <string name="urdu">اردو</string>
    <string name="english">English</string>
    <string name="version_v_2_7_2">Version V.2.7.2</string>
    <string name="yazdan_ilyas">Yazdan Ilyas</string>
    <string name="_03057359340">03057359340</string>
    <string name="yazdan_ilyas_techswivel_com">yazdan.ilyas@techswivel.com</string>
    <string name="edit">edit</string>
    <string name="account_level">Account level</string>
    <string name="account_settings">Account Settings</string>
    <string name="transaction_history">Transaction History</string>
    <string name="add_cash_through_bykea">Add Cash through Bykea</string>
    <string name="scheduled_transactions">Scheduled Transactions</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_approvals">My Approvals</string>
    <string name="goals_rewards"><![CDATA[Goals & Rewards]]></string>
    <string name="biomatric_cashpoint_message">Your first cash point deposit needs to be made through a Biomatric (VBS) cash point</string>
    <string name="cash_points">Cash Points</string>
    <string name="bvs_cash_points">BVS Cash Points</string>
    <string name="_18_0_location">18.0 Location</string>
    <string name="km_faisalabad">KM  FAISALABAD</string>
    <string name="how_to_deposit_cash">How to Deposit Cash</string>
    <string name="for_details">Fee Details</string>
    <string name="help_faq_s"><![CDATA[Help & FAQ\'s]]></string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_maps">Map</string>
</resources>