<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_250dp"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_5dp"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/navHomeImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headingMainTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/my_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navHomeImg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headingSecondryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/profile_settings_more"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headingMainTv" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/languageSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="@dimen/_10dp"
            android:paddingHorizontal="@dimen/_10dp"
            android:textOff="@string/urdu"
            android:textOn="@string/english"
            android:thumb="@drawable/shape_thumb_switch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:showText="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/versionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_v_2_7_2"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/languageSwitch"
            app:layout_constraintRight_toRightOf="@id/languageSwitch"
            app:layout_constraintTop_toBottomOf="@id/languageSwitch" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="@dimen/_8dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/shape_thumb_switch"
            app:layout_constraintTop_toBottomOf="@+id/versionTv">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/_10dp"
                android:src="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/userNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25dp"
                android:fontFamily="sans-serif"
                android:text="@string/yazdan_ilyas"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/userPhoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/_03057359340"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userNameTv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/yazdan_ilyas_techswivel_com"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userPhoneTv" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edit_profile"
                android:paddingHorizontal="@dimen/_5dp"
                app:layout_constraintBottom_toBottomOf="@id/userNameTv"
                app:layout_constraintLeft_toRightOf="@id/userNameTv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/userNameTv"
                app:layout_constraintVertical_bias="0.4">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/editImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_edit" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/editImg"
                    android:fontFamily="sans-serif"
                    android:text="@string/edit"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_10sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>